fruit shop sixth update